import export veiksmai tekstas skaiciai

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <label for="">Password</label>
             <input type="password">
         </div>
-        <div class="form-row"></div>
+        <div class="form-row">
              <button type="button">Click me</button>
+        </div>
     </form>
 
     <div class="kvadratas"></div>
     <div class="apskritimas"></div>
-    
-    
+
+    <script src="./js/home.js" type="module"defer></script>
 </body>
 </html>
